# EasyBot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  SECURITY.md  TEST_PLAN.md  deny.toml  docker-compose.yml  gateway.local.yaml.example  gateway.yaml  prometheus.yml
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/apply-version-bump/: action.yml
.github/actions/docker-setup/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  ci.yml  docker.yml  labeler.yml  release-drafter.yml  release.yml
crates/easybot-adapter-discord/: Cargo.toml
crates/easybot-adapter-discord/src/: lib.rs  types.rs
crates/easybot-adapter-discord/tests/: send_mock.rs
crates/easybot-adapter-feishu/: Cargo.toml
crates/easybot-adapter-feishu/src/: event.rs  lib.rs  types.rs
crates/easybot-adapter-feishu/tests/: send_mock.rs
crates/easybot-adapter-qq/: Cargo.toml
crates/easybot-adapter-qq/src/: auth.rs  gateway.rs  lib.rs  types.rs
crates/easybot-adapter-qq/tests/: send_mock.rs
crates/easybot-adapter-telegram/: Cargo.toml
crates/easybot-adapter-telegram/src/: lib.rs  types.rs
crates/easybot-adapter-telegram/tests/: send_mock.rs
crates/easybot-adapter-wechat/: Cargo.toml
crates/easybot-adapter-wechat/src/: crypto.rs  lib.rs
crates/easybot-adapter-wechat/tests/: send_mock.rs
crates/easybot-adapter-wecom/: Cargo.toml
crates/easybot-adapter-wecom/src/: lib.rs
crates/easybot-api/: Cargo.toml  build.rs
crates/easybot-api/src/: config_manager.rs  lib.rs  log_collector.rs  metrics.rs  openapi.rs  response.rs  server.rs
crates/easybot-api/src/middleware/: mod.rs  rate_limit.rs
crates/easybot-api/src/routes/: adapters.rs  admin.rs  chats.rs  config.rs  docs.rs  health.rs  home.rs  logs.rs  messages.rs  mod.rs  sessions.rs  system.rs  update.rs  ws.rs
crates/easybot-api/templates/: admin.html  admin_layout.html  docs.html  docs_layout.html  home.html  home_layout.html
crates/easybot-api/templates/css/: admin.css
crates/easybot-api/templates/js/: admin.js
crates/easybot-api/tests/: api_integration.rs  common.rs  routes.rs  ws.rs
crates/easybot-api/tests/snapshots/: routes__health_response.snap
crates/easybot-core/: Cargo.toml
crates/easybot-core/src/: lib.rs  system.rs  util.rs
crates/easybot-core/src/adapter/: manager.rs  mod.rs  registry.rs
crates/easybot-core/src/auth/: api_key.rs  mod.rs  permissions.rs
crates/easybot-core/src/bus/: event_bus.rs  mod.rs
crates/easybot-core/src/config/: home.rs  mod.rs  service.rs
crates/easybot-core/src/plugin/: loader.rs  manifest.rs  mod.rs
crates/easybot-core/src/session/: bridge.rs  manager.rs  message_persister.rs  mod.rs
crates/easybot-core/src/storage/: migration.rs  mod.rs  postgres.rs  retention.rs  sqlite.rs
crates/easybot-core/src/types/: adapter.rs  config.rs  error.rs  event.rs  message.rs  mod.rs  session.rs
crates/easybot-core/src/updater/: compact.rs  download.rs  github.rs  mod.rs  precheck.rs  replace.rs  types.rs
crates/easybot-core/src/webhook/: mod.rs
crates/easybot-plugin-sdk/: Cargo.toml
crates/easybot-plugin-sdk/src/: ffi.rs  lib.rs
docs/: 01 user-guide.md  02 plugin-dev.md  03 platform-capabilities.md  04 architecture.md  AUDIT_FIX_PLAN.md  PLUGIN_DEV.md  TEST_PLAN.md  TODO.md  adapter-performance-review.md  api-capabilities-research.md  frontend-plan.md  im-gateway-architecture.md  platform-capabilities.md  rust-implementation-plan.md
docs/adapter/: adapter-performance-review.md  adapter-verification-guide.md
docs/adapter-verification/: README.md  discord.md  feishu.md  qq.md  telegram.md  wechat.md
docs/adapter/verification/: discord.md  feishu.md  qq.md  telegram.md  wechat.md
docs/other/: auto-update-tasks.md  macos-notarization.md  security_audit.md  todo-list.md  upgrade-strategy.md
plugins/example-slack-plugin/: Cargo.toml  plugin.yaml
plugins/example-slack-plugin/src/: lib.rs
scripts/: e2e-real.sh  pre-commit  pre-push  verify.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: discord.rs  feishu.rs  qq.rs  telegram.rs  wechat.rs
tests/fixtures/: Cargo.toml
tests/fixtures/src/: lib.rs
tests/integration/: Cargo.toml
tests/integration/src/: cli.rs  lib.rs  updater.rs
tests/plugins/mock-adapter/: Cargo.toml
tests/plugins/mock-adapter/src/: lib.rs
