[workspace]
resolver = "2"
members = [
    "bin",
    "crates/easybot-core",
    "crates/easybot-api",
    "crates/easybot-adapter-telegram",
    "crates/easybot-plugin-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["EasyBot Contributors"]
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "auth"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# 工具
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
anyhow = "1"

# 跨平台路径
dirs = "6"

# 加密
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"

# HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# 异步工具
futures = "0.3"
dashmap = "6"
parking_lot = "0.12"
async-trait = "0.1"

# OpenAPI / Swagger
utoipa = "5.1"
utoipa-swagger-ui = "9"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
