[workspace]
resolver = "2"
members = [
    "bin",
    "crates/easybot-core",
    "crates/easybot-api",
    "crates/easybot-adapter-telegram",
    "crates/easybot-adapter-discord",
    "crates/easybot-adapter-feishu",
    "crates/easybot-adapter-qq",
    "crates/easybot-adapter-wechat",
    "crates/easybot-plugin-sdk",
    "tests/plugins/mock-adapter",
    "tests/integration",
    "tests/e2e",
    "tests/fixtures",
]

[workspace.package]
description = "IM Gateway — 统一多平台即时通讯网关"
repository = "https://github.com/EasyIndie/EasyBot"
documentation = "https://github.com/EasyIndie/EasyBot"
readme = "README.md"
version = "0.0.16"
edition = "2024"
rust-version = "1.94"
authors = ["EasyBot Contributors"]
license = "GPL-3.0"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "fs"] }

# HTTP / WebSocket
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "auth"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# 数据库
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "uuid", "sqlite-bundled"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
tracing-appender = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# 工具
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
anyhow = "1"

# 跨平台路径
dirs = "6"

# .env 文件加载
dotenvy = "0.15"

# 加密
argon2 = "0.5"
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"

# 可观测性
prometheus = { version = "0.14", features = ["process"] }
sysinfo = "0.39"

# 动态库加载
libloading = "0.9"

# HTTP 客户端
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }

# 异步工具
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.30", default-features = false }
dashmap = "6"
parking_lot = "0.12"
async-trait = "0.1"

# OpenAPI / Swagger
utoipa = "5.1"
utoipa-swagger-ui = "9"

# QR 码生成
qrcode = { version = "0.14", default-features = false }

# 语义版本比较
semver = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = 0

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
