[package]
name = "easybot-adapter-discord"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
futures.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "__rustls-tls"] }
rustls = "0.23"
aws-lc-rs = "1.6"
webpki-roots = "0.26"
tokio-rustls = "0.26"
