[package]
name = "easybot-adapter-discord"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
base64.workspace = true
futures.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

webpki-roots = "1.0"
tokio-rustls = "0.26"

[dev-dependencies]
wiremock = "0.6"
fixtures = { path = "../../tests/fixtures" }
