[package]
name = "easybot-adapter-discord"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
base64.workspace = true

# Discord Gateway SDK (v0.17)
twilight-gateway = { version = "0.17", default-features = false, features = ["rustls-platform-verifier", "twilight-http", "zlib"] }
twilight-model = "0.17"

[dev-dependencies]
wiremock = "0.6"
fixtures = { path = "../../tests/fixtures" }
