[package]
name = "easybot-adapter-feishu"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
larksuite-oapi-sdk-rs = { version = "0.1", features = ["ws"] }

[features]
default = []
