[package]
name = "easybot-adapter-qq"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
futures.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
wiremock = "0.6"
fixtures = { path = "../../tests/fixtures" }

[features]
default = []
