[package]
name = "easybot-adapter-qq"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
futures.workspace = true
tokio-tungstenite = { workspace = true, features = ["connect", "rustls-tls-webpki-roots"] }
base64.workspace = true
parking_lot.workspace = true

[dev-dependencies]
wiremock = "0.6"
fixtures = { path = "../../tests/fixtures" }

[lints]
workspace = true
