[package]
name = "easybot-adapter-telegram"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
serde = { workspace = true, features = ["derive"] }
rstest = "0.22"
