[package]
name = "easybot-adapter-wechat"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
uuid.workspace = true
base64.workspace = true
dirs.workspace = true
aes = "0.8"
md5 = "0.8"

[dev-dependencies]
wiremock = "0.6"

[features]
default = []
