[package]
name = "easybot-api"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
dashmap.workspace = true
futures.workspace = true
anyhow.workspace = true
prometheus.workspace = true
tokio-stream.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]
sqlx = { workspace = true }
http-body-util = "0.1"
bytes = "1"
tokio-tungstenite = { workspace = true, features = ["connect"] }
