[package]
name = "easybot-api"
version.workspace = true
edition.workspace = true

[dependencies]
easybot-core = { path = "../easybot-core" }

axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dashmap.workspace = true
futures.workspace = true
prometheus.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[build-dependencies]
pulldown-cmark = "0.13"
regex = "1"
base64.workspace = true

[dev-dependencies]
tower.workspace = true
sqlx = { workspace = true }
reqwest = { workspace = true }
http-body-util = "0.1"
tokio-tungstenite = { workspace = true, features = ["connect"] }
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
