[package]
name = "easybot-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tracing.workspace = true
sqlx.workspace = true
regex.workspace = true
dirs.workspace = true
anyhow.workspace = true
argon2.workspace = true
sha2.workspace = true
hmac.workspace = true
reqwest.workspace = true
utoipa = { workspace = true }
