[package]
name = "easybot-core"
version.workspace = true
edition.workspace = true

[features]
integration-test = []
plugin-system = ["dep:libloading"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream = { workspace = true, features = ["sync"] }
sqlx.workspace = true
regex.workspace = true
dirs.workspace = true
dotenvy.workspace = true
argon2.workspace = true
rand_core = { version = "0.9", features = ["os_rng"] }
# rand_core 0.6 via password-hash: OsRng needs getrandom feature
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
sha2.workspace = true
hmac.workspace = true
reqwest.workspace = true
libloading = { workspace = true, optional = true }
utoipa = { workspace = true }
sysinfo.workspace = true

[dev-dependencies]
wiremock = "0.6"

[lints]
workspace = true
