[package]
name = "slack-plugin"
version = "0.1.0"
edition = "2024"
description = "Example Slack adapter for EasyBot plugin system"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
easybot-plugin-sdk = { path = "../../crates/easybot-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
