[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
easybot-core = { path = "../../crates/easybot-core", features = ["plugin-system"] }
easybot-plugin-sdk = { path = "../../crates/easybot-plugin-sdk" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tempfile = "3"
ureq = "3"

[lints]
workspace = true
